# category-tree

./: .gitignore  README.md  cloudformation-template.yaml
media/: CategoryTree.mb4
rightshero/: .env  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
rightshero/categories/: models.py  urls.py  views.py
rightshero/categories/management/commands/: pypopulate_categories.py
rightshero/categories/migrations/: 0001_initial.py
rightshero/categories/templates/: index.html
rightshero/rightshero/: asgi.py  settings.py  urls.py  wsgi.py
