[tool.poetry]
name = "category-structure-with-ec2-deployment"
version = "0.1.0"
description = ""
authors = ["EslamRedaMohamed <eslamreda.info@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
